services/deployment-asset-ms.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-asset-ms
spec:
  selector:
    matchLabels:
      app: asset-ms
  replicas: 2
  template:
    metadata:
      labels:
        app: asset-ms
    spec:
      containers:
        - name: asset-ms
          image: juliocardona/asset-ms
          ports:
            - containerPort: 8080
