services/deployment-mongo-assignee.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-assignee
spec:
  selector:
    matchLabels:
      app: mongo-assignee
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo-assignee
    spec:
      containers:
        - name: mongo-assignee
          image: mongo
          ports:
            - containerPort: 27017
