services/deployment-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
          command: ["redis-server", "--appendonly", "yes"]
