services/service-assignee-ms.yml
apiVersion: v1
kind: Service
metadata:
  name: service-assignee-ms
spec:
  selector:
    app: assignee-ms
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
