services/service-mongo-asset.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-asset
spec:
  selector:
    app: mongo-asset
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
