services/service-mongo-assignee.yml
apiVersion: v1
kind: Service
metadata:
  name: service-mongo-assignee
spec:
  selector:
    app: mongo-assignee
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
