services/service-redis.yml
apiVersion: v1
kind: Service
metadata:
  name: service-redis
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
