services/service-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ingress.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-assignee-ms
                port:
                  number: 8080
